--- a/views/user/resetpassword.ejs
+++ b/views/user/resetpassword.ejs
@@ -10,53 +10,62 @@
                     </div>
                 </div>
             </div>
-            <section class="pt-150 pb-150">
+
+            <section class="pt-100 pb-100">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-10 m-auto">
-                            <div class="row">
-                                <div class="col-lg-5 m-auto">
-                                    <div
-                                        class="login_wrap widget-taber-content p-30 background-white border-radius-20 mb-md-5 mb-lg-0 mb-sm-5">
-                                        <div class="padding_eight_all bg-white">
-                                            <div class="heading_s1">
-                                                <h3 class="mb-30">Reset Password</h3>
-                                            </div>
-                                            <form id="resetPasswordForm">
-                                                <div class="form-group">
-                                                    <input type="hidden" name="token" value="<%= tokenData.token %>" />
-                                                    <input type="hidden" name="user_id" value="<%= tokenData._id %>" />
-                                                    <div class="form-group position-relative">
-                                                        <input type="password" name="password" id="password"
-                                                            placeholder="Password" class="form-control">
-                                                        <i class="fas fa-eye toggle-password"></i>
-                                                    </div>
-                                                    <div id="passwordError" class="error-message"></div>
+                        <!-- Image Column -->
+                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
+                            <img src="/imgs/pages/Reset Password Page.png" alt="Reset Password" class="img-fluid"
+                                style="max-width: 100%; height: auto;">
+                        </div>
 
-                                                    <div class="form-group">
-                                                        <input type="password" name="confirmPassword"
-                                                            id="confirmPassword" placeholder="Confirm password">
-                                                        <i class="fas fa-eye toggle-password"></i>
-
-                                                    </div>
-                                                    <div id="confirmPasswordError" class="error-message"></div>
-
-                                                </div>
-                                                <div class="form-group text-center">
-                                                    <button type="submit"
-                                                        class="btn btn-fill-out btn-block hover-up rounded-pill"
-                                                        name="resetPassword">Reset Password</button>
-                                                </div>
-                                            </form>
-                                        </div>
+                        <!-- Reset Password Form Column -->
+                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
+                            <div
+                                class="login_wrap widget-taber-content p-30 background-white border-radius-20 mb-md-5 mb-lg-0 mb-sm-5">
+                                <div class="padding_eight_all bg-white">
+                                    <div class="heading_s1">
+                                        <h3 class="mb-30 text-center">Reset Password</h3>
                                     </div>
+                                    <p class="text-black">Enter your new password below to reset your account.</p>
+                                    <br>
+                                    <form id="resetPasswordForm">
+                                        <input type="hidden" name="token" value="<%= tokenData.token %>" />
+                                        <input type="hidden" name="user_id" value="<%= tokenData._id %>" />
+
+                                        <div class="form-group">
+                                            <input type="password" name="password" id="password" class="form-control"
+                                                placeholder="New Password">
+                                            <i class="fas fa-eye-slash toggle-password"></i>
+                                        </div>
+                                        <div id="passwordError" class="text-danger m-2" >
+                                        </div>
+
+                                        <div class="form-group">
+                                            <input type="password" name="confirmPassword" id="confirmPassword"
+                                                class="form-control" placeholder="Confirm Password">
+                                            <i class="fas fa-eye-slash toggle-password"></i>
+                                        </div>
+                                        <div id="confirmPasswordError" class="text-danger m-2"
+                                        ></div>
+
+                                        <div class="form-group text-center">
+                                            <button type="submit"
+                                                class="btn btn-fill-out btn-block hover-up rounded-pill">
+                                                Reset Password
+                                            </button>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </section>
         </main>
+
 
         <%- include('../layouts/footer.ejs') %>
             <%- include('../layouts/preloader.ejs') %>
@@ -70,11 +79,18 @@
                         // Toggle password visibility
                         document.querySelectorAll('.toggle-password').forEach(function (toggle) {
                             toggle.addEventListener('click', function () {
-                                const passwordInput = this.previousElementSibling; // Assuming the input is always the previous element sibling
-                                passwordInput.type = passwordInput.type === 'password' ? 'text' : 'password';
-                                this.classList.toggle('fa-eye-slash');
+                                const passwordInput = this.previousElementSibling;
+                                const isPassword = passwordInput.type === 'password';
+
+                                // Toggle input type
+                                passwordInput.type = isPassword ? 'text' : 'password';
+
+                                // Toggle eye icons
+                                this.classList.toggle('fa-eye-slash', !isPassword);
+                                this.classList.toggle('fa-eye', isPassword);
                             });
                         });
+
 
 
                         //for the submition
