--- a/views/user/verifyOtp.ejs
+++ b/views/user/verifyOtp.ejs
@@ -191,7 +191,7 @@
 <body>
   <div class="container">
     <div class="image-section">
-      <img src="/imgs/pages/otpPage.jpg" alt="OTP Image">
+      <img src="/imgs/pages/Otp Page.png" alt="OTP Image">
     </div>
 
     <div class="form-section">
