--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -55,7 +55,7 @@
                                             <div class="row align-items-center">
                                                 <div
                                                     class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
-                                                    <img src="/imgs/pages/AddToCartPage.png" alt="Empty Cart Image"
+                                                    <img src="/imgs/pages/Add To Cart page.png" alt="Empty Cart Image"
                                                         class="addToCart-img">
                                                 </div>
                                                 <div
