--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -6,7 +6,7 @@
                 <div class="row">
                     <!-- Image Column -->
                     <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
-                        <img src="/imgs/pages/contactPage.jpeg" alt="contact us" class="img-fluid">
+                        <img src="/imgs/pages/Contact Us Page.png" alt="contact us" class="img-fluid">
                     </div>
 
                     <!-- Contact Form Column -->
@@ -62,3 +62,8 @@
         <%- include('../layouts/footer.ejs') %>
             <%- include('../layouts/preloader.ejs') %>
                 <%- include('../layouts/script.ejs') %>
+
+
+
+
+                   
