--- a/views/user/forgotPassword.ejs
+++ b/views/user/forgotPassword.ejs
@@ -11,12 +11,12 @@
                 </div>
             </div>
 
-            <section class="pt-100 pb-100">
+            <section class="pt-50 pb-50">
                 <div class="container">
                     <div class="row">
                         <!-- Image Column -->
                         <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
-                            <img src="/imgs/pages/forgotPasswordPage.jpg" alt="Forgot Password" class="img-fluid"
+                            <img src="/imgs/pages/Forgot Password Page.png" alt="Forgot Password" class="img-fluid"
                                 style="max-width: 100%; height: auto;">
                         </div>
 
@@ -115,13 +115,13 @@
                                         showConfirmButton: false
                                     });
                                 });
-                            });
+                        });
 
 
-                            // Listen for input events to hide the error when the user starts typing
-                            document.getElementById('email').addEventListener('input', function () {
-                                const emailError = document.getElementById('emailError');
-                                emailError.style.display = 'none'; // Hide the error message when the user starts typing
-                            });
+                        // Listen for input events to hide the error when the user starts typing
+                        document.getElementById('email').addEventListener('input', function () {
+                            const emailError = document.getElementById('emailError');
+                            emailError.style.display = 'none'; // Hide the error message when the user starts typing
+                        });
 
                     </script>
