--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -25,9 +25,9 @@
                     <div class="container">
                         <div class="row">
                             <!-- Login Form Column -->
-                            <div class="col-lg-6 col-md-6 col-sm-12 ">
+                            <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
                                 <div
-                                    class="login_wrap widget-taber-content p-30 background-white border-radius-20 mb-md-5 mb-lg-0 mb-sm-5">
+                                    class="login_wrap widget-taber-content p-30  background-white border-radius-20 mb-md-5 mb-lg-0 mb-sm-5">
                                     <div class="padding_eight_all bg-white">
                                         <div class="heading_s1">
                                             <h3 class="mb-30 text-center">Login</h3>
@@ -88,8 +88,8 @@
                             </div>
 
                             <!-- Image Column -->
-                            <div class="col-lg-6 col-md-6 col-sm-12  d-flex align-items-center justify-content-center">
-                                <img src="/imgs/pages/loginPage.png" alt="loginImg" class="img-fluid">
+                            <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
+                                <img src="/imgs/pages/Login Page.png" alt="loginImg" class="img-fluid">
                             </div>
                         </div>
                     </div>
