--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -19,22 +19,15 @@
                     </div>
                 </div>
             </div>
-            <section class="pt-100 pb-100">
+            <section class="pt-75 pb-50">
                 <div class="container">
                     <div class="row">
-                        <!-- Image Column -->
-                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
-                            <img src="/imgs/pages/registerPage.png" alt="registerImg" class="img-fluid"
-                                style="max-width: 100%; width: 100%; ">
-                        </div>
-
-
                         <!-- Registration Form Column -->
-                        <div class="col-lg-6 col-md-6 col-sm-12">
-                            <div class="login_wrap widget-taber-content p-30 background-white border-radius-20">
+                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
+                            <div class="login_wrap widget-taber-content p-20 background-white border-radius-20">
                                 <div class="padding_eight_all bg-white">
                                     <div class="heading_s1">
-                                        <h3 class="mb-30 text-center">Create an Account</h3>
+                                        <h3 class="mb-20 text-center">Create an Account</h3>
                                     </div>
                                     <form id="registerForm" action="/register" method="post" novalidate>
                                         <div class="form-group">
@@ -87,12 +80,12 @@
                                             </button>
                                         </div>
                                     </form>
-                                    <div class="divider-text-center mt-15 mb-15">
+                                    <div class="divider-text-center">
                                         <span> or</span>
                                     </div>
-                                    <ul class="btn-login list_none text-center mb-15">
+                                    <ul class="btn-login list_none text-center">
                                         <li>
-                                            <a href="#" class="btn btn-facebook hover-up mb-lg-3 mb-sm-4 rounded-pill">
+                                            <a href="#" class="btn btn-facebook hover-up mt-5 rounded-pill">
                                                 Sign Up With <i class="fab fa-facebook-f"></i>
                                             </a>
                                         </li>
@@ -102,11 +95,16 @@
                                             </a>
                                         </li>
                                     </ul>
-
-                                    <div class="text-center">Already have an account? <a href="/login">Sign
-                                            in now</a></div>
+                                    <div class="text-center mt-10">Already have an account? <a href="/login">Sign
+                                        in now</a></div>
                                 </div>
                             </div>
+                        </div>
+
+                        <!-- Image Column -->
+                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
+                            <img src="/imgs/pages/Sign up Page.png" alt="registerImg" class="img-fluid"
+                                style="max-width: 100%; width: 100%; ">
                         </div>
                     </div>
                 </div>
