--- a/views/user/wishList.ejs
+++ b/views/user/wishList.ejs
@@ -43,7 +43,7 @@
                                             <div class="row align-items-center">
                                                 <div
                                                     class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
-                                                    <img src="/imgs/pages/wisheListPage.png" alt="Wishlist Image"
+                                                    <img src="/imgs/pages/Wish List Page.png" alt="Wishlist Image"
                                                         class="wishlist-img">
                                                 </div>
                                                 <div
