update and added pages.fixed the bug in dashboard

--- a/views/user/about.ejs
+++ b/views/user/about.ejs
@@ -1,6 +1,186 @@
 <%- include('../layouts/header.ejs') %>
     <%- include('../layouts/navbar.ejs') %>
 
+        <main class="main single-page">
+            <div class="page-header breadcrumb-wrap">
+                <div class="container">
+                    <div class="breadcrumb">
+                        <a href="/" rel="nofollow">Home</a>
+                        <span></span> About Us
+                    </div>
+                </div>
+            </div>
+            <section class="section-padding">
+                <div class="container pt-50 pb-50">
+                    <div class="row">
+                        <div class="col-lg-6 align-self-center mb-lg-0 mb-4">
+                            <h6 class="mt-0 mb-15 text-uppercase font-sm text-brand wow fadeIn animated">About
+                                Threadloom</h6>
+                            <h1 class="font-heading mb-40">
+                                Crafting Fashion, Weaving Dreams
+                            </h1>
+                            <p>At Threadloom, we believe in designing clothes that make you feel confident and stylish.
+                                Our mission is to provide the latest trends with the best quality fabrics.</p>
+                            <p>With a passion for fashion, we create dresses that blend comfort with elegance. Every
+                                stitch tells a story, and we aim to make you a part of it.</p>
+                        </div>
+                        <div class="col-lg-6 d-flex flex-wrap mb-4 mt-5">
+                            <div class="col-lg-6 col-6 ">
+                                <img src="/imgs/pages/About page 1.png" alt="About Threadloom" class="img-fluid rounded"
+                                    style="height: 400px; width: 100%;">
+                            </div>
+                            <div class="col-lg-6 col-6 ">
+                                <img src="/imgs/pages/About page 2.png" alt="About Threadloom" class="img-fluid rounded"
+                                    style="height: 400px; width: 100%;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </section>
+
+            <section id="team" class="pt-25 wow fadeIn animated">
+                <div class="container">
+                    <div class="row mb-50 align-items-center">
+                        <div class="col-md-6">
+                            <h6 class="mt-0 mb-15 text-uppercase font-sm text-brand wow fadeIn animated">Our Team</h6>
+                            <h2 class="mb-15 wow fadeIn animated">Meet Our Visionaries</h2>
+                            <p class="text-grey-3 wow fadeIn animated">Threadloom is led by passionate individuals
+                                dedicated to bringing you the best in fashion.</p>
+                        </div>
+                    </div>
+                    <div class="position-relative">
+                        <div class="row wow fadeIn animated">
+                            <div class="col-md-3">
+                                <div class="blog-card border-radius-10 overflow-hidden text-center">
+                                    <img src="/imgs/pages/ceo.png"
+                                        class="border-radius-10 mb-30 hover-up img-fluid rounded" alt="ceo Threadloom">
+                                    <h4 class="fw-500 mb-0">Akhil Das P</h4>
+                                    <p class="fw-400 text-brand mb-10">CEO & Co-Founder</p>
+                                    <div class="mobile-social-icon wow fadeIn animated mb-sm-5 mb-md-0 animated">
+                                        <a href="https://www.facebook.com/Akhildasaki"><img
+                                                src="/imgs/theme/icons/icon-facebook.svg" alt="fb"></a>
+                                        <a href="https://www.instagram.com/akhildas___2___aki/"><img
+                                                src="/imgs/theme/icons/icon-instagram.svg" alt="insta"></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-3">
+                                <div class="blog-card border-radius-10 overflow-hidden text-center">
+                                    <img src="/imgs/pages/ceo.png"
+                                        class="border-radius-10 mb-30 hover-up img-fluid rounded"
+                                        alt="Engineer Threadloom">
+                                    <h4 class="fw-500 mb-0">Akhil Das P</h4>
+                                    <p class="fw-400 text-brand mb-10">Head Engineer</p>
+                                    <div class="mobile-social-icon wow fadeIn animated mb-sm-5 mb-md-0 animated">
+                                        <a href="https://www.facebook.com/Akhildasaki"><img
+                                                src="/imgs/theme/icons/icon-facebook.svg" alt="fb"></a>
+                                        <a href="https://www.instagram.com/akhildas___2___aki/"><img
+                                                src="/imgs/theme/icons/icon-instagram.svg" alt="insta"></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-3">
+                                <div class="blog-card border-radius-10 overflow-hidden text-center">
+                                    <img src="/imgs/pages/ceo.png"
+                                        class="border-radius-10 mb-30 hover-up img-fluid rounded" alt="ceo Threadloom">
+                                    <h4 class="fw-500 mb-0">Akhil Das P</h4>
+                                    <p class="fw-400 text-brand mb-10">Designer</p>
+                                    <div class="mobile-social-icon wow fadeIn animated mb-sm-5 mb-md-0 animated">
+                                        <a href="https://www.facebook.com/Akhildasaki"><img
+                                                src="/imgs/theme/icons/icon-facebook.svg" alt="fb"></a>
+                                        <a href="https://www.instagram.com/akhildas___2___aki/"><img
+                                                src="/imgs/theme/icons/icon-instagram.svg" alt="insta"></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-3">
+                                <div class="blog-card border-radius-10 overflow-hidden text-center">
+                                    <img src="/imgs/pages/ceo.png"
+                                        class="border-radius-10 mb-30 hover-up img-fluid rounded"
+                                        alt="Engineer Threadloom">
+                                    <h4 class="fw-500 mb-0">Akhil Das P</h4>
+                                    <p class="fw-400 text-brand mb-10">Project Manager</p>
+                                    <div class="mobile-social-icon wow fadeIn animated mb-sm-5 mb-md-0 animated">
+                                        <a href="https://www.facebook.com/Akhildasaki"><img
+                                                src="/imgs/theme/icons/icon-facebook.svg" alt="fb"></a>
+                                        <a href="https://www.instagram.com/akhildas___2___aki/"><img
+                                                src="/imgs/theme/icons/icon-instagram.svg" alt="insta"></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="work" class="mt-40 pt-50 pb-50 section-border">
+                <div class="container">
+                    <div class="row mb-50 text-center">
+                        <h6 class="mt-0 mb-5 text-uppercase text-brand font-sm wow fadeIn animated">Threadloom
+                            Corporation</h6>
+                        <h2 class="mb-15 text-grey-1 wow fadeIn animated">Our Stores Across the World</h2>
+                        <p class="w-50 m-auto text-grey-3 wow fadeIn animated">Our flagship stores are present in major
+                            fashion hubs, ensuring the best experience for our customers.</p>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 text-center mb-md-0 mb-4">
+                            <img class="btn-shadow-brand hover-up border-radius-10 bg-brand-muted wow fadeIn animated"
+                                src="/imgs/pages/company-1.jpg" alt="">
+                            <h4 class="mt-30 mb-15 wow fadeIn animated">New York, USA</h4>
+                            <p class="text-grey-3 wow fadeIn animated">27 Division St, New York<br>NY 10002, USA</p>
+                        </div>
+                        <div class="col-md-4 text-center mb-md-0 mb-4">
+                            <img class="btn-shadow-brand hover-up border-radius-10 bg-brand-muted wow fadeIn animated"
+                                src="/imgs/pages/company-2.jpg" alt="">
+                            <h4 class="mt-30 mb-15 wow fadeIn animated">Paris, France</h4>
+                            <p class="text-grey-3 wow fadeIn animated">22 Rue des Carmes<br>75005 Paris</p>
+                        </div>
+                        <div class="col-md-4 text-center">
+                            <img class="btn-shadow-brand hover-up border-radius-10 bg-brand-muted wow fadeIn animated"
+                                src="/imgs/pages/company-3.jpg" alt="">
+                            <h4 class="mt-30 mb-15 wow fadeIn animated">Mumbai, India</h4>
+                            <p class="text-grey-3 wow fadeIn animated">248 Mumbai Street<br>400001 Mumbai, India</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-padding">
+                <div class="container pb-25">
+                    <h3 class="section-title mb-20 wow fadeIn animated text-center"><span>Featured</span> Clients</h3>
+                    <div class="carausel-6-columns-cover position-relative wow fadeIn animated">
+                        <div class="carausel-6-columns text-center" id="carausel-6-columns-3">
+                            <div class="brand-logo">
+                                <img class="img-grey-hover" src="/imgs/banner/brand-1.png" alt="">
+                            </div>
+                            <div class="brand-logo">
+                                <img class="img-grey-hover" src="/imgs/banner/brand-2.png" alt="">
+                            </div>
+                            <div class="brand-logo">
+                                <img class="img-grey-hover" src="/imgs/banner/brand-3.png" alt="">
+                            </div>
+                            <div class="brand-logo">
+                                <img class="img-grey-hover" src="/imgs/banner/brand-4.png" alt="">
+                            </div>
+                            <div class="brand-logo">
+                                <img class="img-grey-hover" src="/imgs/banner/brand-5.png" alt="">
+                            </div>
+                            <div class="brand-logo">
+                                <img class="img-grey-hover" src="/imgs/banner/brand-6.png" alt="">
+                            </div>
+                            <div class="brand-logo">
+                                <img class="img-grey-hover" src="/imgs/banner/brand-3.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
 
 
 
