--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -20,36 +20,10 @@
 
                             <h5 class="mb-10 mt-30 fw-600 text-grey-4 wow fadeIn animated">Follow Us</h5>
                             <div class="mobile-social-icon wow fadeIn animated mb-sm-5 mb-md-0">
-                                <a href="#"><img src="/imgs/theme/icons/icon-facebook.svg" alt=""></a>
-                                <a href="#"><img src="/imgs/theme/icons/icon-twitter.svg" alt=""></a>
-                                <a href="#"><img src="/imgs/theme/icons/icon-instagram.svg" alt=""></a>
-                                <a href="#"><img src="/imgs/theme/icons/icon-pinterest.svg" alt=""></a>
-                                <a href="#"><img src="/imgs/theme/icons/icon-youtube.svg" alt=""></a>
-                            </div>
-
-                            <!-- Form Container -->
-                            <div
-                                class="login_wrap widget-taber-content mt-4 p-30 background-white border-radius-20 mb-md-5 mb-lg-0 mb-sm-5">
-                                <form class="contact-form" action="#" method="post">
-                                    <label for="name">Name</label>
-                                    <input type="text" id="name" name="name" placeholder="Your Name" required>
-
-                                    <label for="email">Email</label>
-                                    <input type="email" id="email" name="email" placeholder="Your Email" required>
-
-                                    <label for="subject">Subject</label>
-                                    <input type="text" id="subject" name="subject" placeholder="Subject" required>
-
-                                    <label for="message">Message</label>
-                                    <textarea id="message" name="message" rows="5" placeholder="Your Message"
-                                        required></textarea>
-                                    <div class="form-group text-center mt-4">
-                                        <button type="submit" class="btn btn-fill-out btn-block hover-up rounded-pill">
-                                            Send Message
-                                        </button>
-
-                                    </div>
-                                </form>
+                                <a href="https://www.facebook.com/Akhildasaki"><img
+                                        src="/imgs/theme/icons/icon-facebook.svg" alt="fb"></a>
+                                <a href="https://www.instagram.com/akhildas___2___aki/"><img
+                                        src="/imgs/theme/icons/icon-instagram.svg" alt="insta"></a>
                             </div>
                         </div>
                     </div>
@@ -62,8 +36,3 @@
         <%- include('../layouts/footer.ejs') %>
             <%- include('../layouts/preloader.ejs') %>
                 <%- include('../layouts/script.ejs') %>
-
-
-
-
-                   
