--- a/views/user/productDetails.ejs
+++ b/views/user/productDetails.ejs
@@ -607,6 +607,9 @@
                                     title: 'Success!',
                                     text: data.message,
                                 });
+                                setTimeout(() => {
+                                    location.reload();
+                                }, 3000);
                             } else {
                                 // Handle errors
                                 Swal.fire({
